# CS-4230-Milestone-1

./: CMakeLists.txt  Project_2.doc  README.md  chess.cpp  chess.h  chessBoard.cpp  main  main.cpp
src/: chess_board.cpp  chess_board.h  chess_game.cpp  chess_game.h  main.cpp
tests/: CMakeLists.txt  chess_board_test.cpp  chess_game_test.cpp  main_test.cpp
